--- a/index.html
+++ b/index.html
@@ -1,40 +1,86 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تشخیص وضعیت کاغذ</title>
-  <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon-192.png" type="image/png">
+  <title>تشخیص وضعیت کاغذ - هوش مصنوعی</title>
+  <!-- <link rel="manifest" href="manifest.json"> -->
+  <link rel="icon" href="icon-192.png" type="image/png">
   <style>
-    body { font-family: Tahoma, sans-serif; text-align: center; padding: 20px; background: #f0f0f0; direction: rtl; }
-    h1 { color: #2c3e50; }
-    #preview { max-width: 300px; margin: 20px auto; border: 3px solid #3498db; border-radius: 10px; }
-    #label-container div { font-size: 22px; margin: 10px; padding: 10px; background: white; border-radius: 8px; }
-    .high { color: #27ae60; font-weight: bold; }
+    @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;700&display=swap');
+    body {
+      margin: 0; padding: 0; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      font-family: 'Vazirmatn', Tahoma, sans-serif; min-height: 100vh;
+      display: flex; flex-direction: column; align-items: center; justify-content: center; color: #333;
+    }
+    .container { background: white; border-radius: 24px; padding: 30px; width: 90%; max-width: 420px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.15); text-align: center; }
+    h1 { font-size: 28px; margin: 0 0 20px; color: #4a00e0; }
+    .upload-btn {
+      background: #8e2de2; color: white; border: none; padding: 16px 32px; font-size: 18px;
+      border-radius: 50px; cursor: pointer; margin: 20px 0; box-shadow: 0 8px 20px rgba(142,45,226,0.4);
+      transition: all 0.3s; font-weight: bold;
+    }
+    .upload-btn:hover { transform: translateY(-3px); box-shadow: 0 12px 25px rgba(142,45,226,0.5); }
+    .upload-btn:active { transform: translateY(1px); }
+
+    #preview {
+      max-width: 100%; max-height: 400px; border-radius: 16px; margin: 20px auto;
+      display: none; box-shadow: 0 10px 30px rgba(0,0,0,0.2); border: 6px solid #fff;
+    }
+    #loading {
+      display: none; margin: 30px 0; font-size: 20px; color: #8e2de2;
+    }
+    .spinner {
+      width: 50px; height: 50px; border: 6px solid #f3f3f3; border-top: 6px solid #8e2de2;
+      border-radius: 50%; animation: spin 1s linear infinite; margin: 20px auto;
+    }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
+    #result {
+      margin-top: 20px; padding: 20px; background: #f8f9ff; border-radius: 16px; display: none;
+    }
+    .result-item {
+      padding: 12px; margin: 10px 0; background: white; border-radius: 12px;
+      font-size: 18px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); transition: all 0.3s;
+    }
+    .best { background: linear-gradient(120deg, #84fab0, #8fd3f4) !important; color: #000; font-weight: bold; font-size: 22px !important; }
   </style>
 </head>
 <body>
-  <h1>عکس کاغذ رو آپلود کن</h1>
-  <input type="file" id="upload" accept="image/*">
-  <br><br>
-  <img id="preview" src="" alt="پیش‌نمایش">
-  <div id="label-container"></div>
+
+  <div class="container">
+    <h1>تشخیص وضعیت کاغذ</h1>
+    <p>عکس کاغذ رو انتخاب کن تا هوش مصنوعی بگه چه وضعیتی داره</p>
+
+    <button class="upload-btn" onclick="document.getElementById('fileInput').click()">
+      آپلود عکس
+    </button>
+    <input type="file" id="fileInput" accept="image/*" style="display:none">
+
+    <div id="loading">
+      <div class="spinner"></div>
+      <p>در حال تحلیل عکس...</p>
+    </div>
+
+    <img id="preview" src="" alt="پیش‌نمایش">
+
+    <div id="result"></div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
   <script>
-    const URL = "./my_model/";  // مسیر پوشه مدلت
+    const URL = "./my_model/";
     let model;
 
     async function loadModel() {
       const modelURL = URL + "model.json";
       const metadataURL = URL + "metadata.json";
       model = await tmImage.load(modelURL, metadataURL);
-      document.getElementById("label-container").innerHTML = "<div>مدل آماده است! عکس آپلود کن</div>";
     }
 
-    document.getElementById("upload").addEventListener("change", function(e) {
+    document.getElementById("fileInput").addEventListener("change", function(e) {
       const file = e.target.files[0];
       if (!file) return;
 
@@ -42,29 +88,44 @@
       reader.onload = function(ev) {
         const img = document.getElementById("preview");
         img.src = ev.target.result;
-        img.onload = async function() {
-          const prediction = await model.predict(img);
-          let output = "";
-          let maxProb = 0;
-          let bestClass = "";
+        img.style.display = "block";
+        document.getElementById("loading").style.display = "block";
+        document.getElementById("result").style.display = "none";
 
-          for (let i = 0; i < prediction.length; i++) {
-            const prob = (prediction[i].probability * 100).toFixed(1);
-            if (prediction[i].probability > maxProb) {
-              maxProb = prediction[i].probability;
-              bestClass = prediction[i].className;
-            }
-            const cls = prob > 50 ? "high" : "";
-            output += `<div class="${cls}">${prediction[i].className} → ${prob}%</div>`;
-          }
-          document.getElementById("label-container").innerHTML = 
-            `<div style="font-size:26px;color:#e74c3c">نتیجه: <b>${bestClass}</b> (${(maxProb*100).toFixed(1)}%)</div>` + output;
+        img.onload = async function() {
+          setTimeout(async () => {  // یه کم تأخیر برای لودینگ قشنگ
+            const prediction = await model.predict(img);
+            showResults(prediction);
+            document.getElementById("loading").style.display = "none";
+          }, 800);
         }
       }
       reader.readAsDataURL(file);
     });
 
-    loadModel(); // خودکار مدل رو لود کن
+    function showResults(predictions) {
+      let output = "";
+      let maxProb = 0;
+      let bestClass = "";
+
+      predictions.forEach(p => {
+        const prob = (p.probability * 100).toFixed(1);
+        if (p.probability > maxProb) {
+          maxProb = p.probability;
+          bestClass = p.className;
+        }
+        const isBest = p.probability === maxProb ? "best" : "";
+        output += `<div class="result-item ${isBest}">${p.className}<br><b>${prob}%</b></div>`;
+      });
+
+      document.getElementById("result").innerHTML = `
+        <h3>نتیجه: <span style="color:#8e2de2">${bestClass}</span></h3>
+        ${output}
+      `;
+      document.getElementById("result").style.display = "block";
+    }
+
+    loadModel();
   </script>
 </body>
 </html>
